Fixed mobile nav elements being clickable when not visible

--- a/styles/header.css
+++ b/styles/header.css
@@ -39,14 +39,28 @@
 */
 
 .fade-section {
-  opacity: 0;
-  transform: translateY(-20px);
-  transition: opacity 0.6s ease, transform 0.6s ease;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
 .fade-section.visible {
-  opacity: 1;
-  transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/*
+
+=====================================
+
+        Mobile Hidden Initially
+
+=====================================
+
+*/
+
+.navMobileExpandContainer {
+    display: none;
 }
 
 /*
